# ai-health-assistant

./: .env.example  .gitignore  LICENSE  README.md  conftest.py  main.py  pyproject.toml  requirements.txt
agents/: base_agent.py  emergency_agent.py  router_agent.py  safety_agent.py  symptom_agent.py
core/: config.py  logger.py  orchestrator.py
docs/: EXECUTION_GUIDE.md
knowledge/: chunker.py  ingestion.py  ocr.py  store.py
tests/: test_mvp.py  test_ocr.py  test_phase2.py
